--- a/app/_components/sections/modern-ballet/Instructor.module.css
+++ b/app/_components/sections/modern-ballet/Instructor.module.css
@@ -1,5 +1,5 @@
 .section {
-  padding: 16px 0 60px;
+  padding: 16px 0 16px;
 }
 
 .grid {
@@ -109,11 +109,6 @@
   color: #de4e8c;
 }
 
-@media (max-width: 576px) {
-  .section {
-    padding-bottom: 100px;
-  }
-}
 
 @media (max-width: 768px) {
   .grid {
