--- a/app/globals.css
+++ b/app/globals.css
@@ -56,3 +56,9 @@ img {
   margin: 0 auto;
   padding: 0 16px;
 }
+
+@media (max-width: 576px) {
+  .h2SmallMargin {
+    margin-top: 60px !important;
+  }
+}
